73-scroll-button-on-desktop : correct alignment

--- a/blocks/hero/scroll-button.css
+++ b/blocks/hero/scroll-button.css
@@ -3,24 +3,22 @@
 }
 
 @media (min-width: 992px) {
-  .scroll-button {
+  div .scroll-button {
     display: flex;
-    flex-direction: column;
     justify-content: center;
-    margin: auto;
     width: 100%;
-    position: absolute;
-    bottom: 5%;
-    right: 0%;
+    position: relative;
   }
   
   .scroll-button a {
+    position: absolute;
     text-align: center;
     color: var(--text-color);
     text-transform: uppercase;
     font-family: var(--body-font-family);
     font-size: var(--body-font-size-xs);
     font-weight: 400;
+    bottom: 0%;
   }
   
   .scroll-button a::after {
